# Car_entertainment_system

./: .gitignore
.trae/rules/: AI自我治理与上下文管理规则.md  技术栈限制.md  推送命令.md
agent/: .env.example  config.py  grpc_server.py  mock_data.json  requirements.txt  server.py
agent/llm_agent/: agent.py  chain.py  session.py  tools.py
agent/proto/: __init__.py  car_assistant.proto  car_assistant_pb2.py  car_assistant_pb2_grpc.py
deploy/: install_service.ps1  pack_hmi.ps1  uninstall_service.ps1
docs/车载娱乐系统/: ACCEPTANCE_车载娱乐系统.md  ALIGNMENT_车载娱乐系统.md  CONSENSUS_车载娱乐系统.md  DESIGN_车载娱乐系统.md  FINAL_车载娱乐系统.md  TASKS_车载娱乐系统.md  TODO_车载娱乐系统.md
hmi/: CMakeLists.txt
hmi/resources/: qml.qrc
hmi/src/: main.cpp
hmi/src/infrastructure/: audio_engine.cpp  audio_engine.h  bluetooth_adapter.cpp  bluetooth_adapter.h  config_manager.cpp  config_manager.h  database.cpp  database.h  serial_port_adapter.cpp  serial_port_adapter.h
hmi/src/infrastructure/proto/: car_assistant.grpc.pb.cc  car_assistant.grpc.pb.h  car_assistant.pb.cc  car_assistant.pb.h
hmi/src/service/: agent_http_client.cpp  agent_http_client.h  bluetooth_service.cpp  bluetooth_service.h  config_service.cpp  config_service.h  grpc_client_adapter.cpp  grpc_client_adapter.h  map_service.cpp  map_service.h  media_service.cpp  media_service.h  vehicle_service.cpp  vehicle_service.h
hmi/src/ui/: AgentChatPage.qml  BluetoothPage.qml  NavBar.qml  NavigationPage.qml  PlayerPage.qml  SciFiCard.qml  SettingsPage.qml  VehiclePage.qml  main.qml
hmi/src/viewmodel/: agent_viewmodel.cpp  agent_viewmodel.h  bluetooth_viewmodel.cpp  bluetooth_viewmodel.h  nav_viewmodel.cpp  nav_viewmodel.h  player_viewmodel.cpp  player_viewmodel.h  settings_viewmodel.cpp  settings_viewmodel.h  vehicle_viewmodel.cpp  vehicle_viewmodel.h
hmi/tests/: test_config.cpp
hmi/translations/: en.qm  en.ts  zh_CN.qm  zh_CN.ts
tests/agent_tests/: test_tools.py
